--- a/index.html
+++ b/index.html
@@ -18,15 +18,29 @@
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
         Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas architecto ipsa
-        excepturi aut non
-        laudantium sequi fugit officiis optio deleniti asperiores rem eius laborum maxime blanditiis culpa, quis iste?
+      <p class="mt-auto"> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
+        This Can Bring Order and Function to Your Daily Life with Taskmaster Reminders and Easy of Edit of Each Task. 
       </p>
     </header>
     <main class="col-12 col-lg-9">
-      <div class="m-5">
-        <h2>To Do</h2>
-        <ul id="list-toDo" class="list-group"> </ul>
+      <div class="m-5 row justify-content-around">
+      <!--TO DO LIST-->
+       <div class="col">
+         <h2>To Do</h2>
+         <ul id="list-toDo" class="list-group"></ul>
+         </div>
+       <!--END TO DO LIST-->  
+       <!--IN PROGRESS LIST-->
+        <div class="col">
+          <h2>In Progress</h2>
+          <ul id="list-inProgress" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill"></span>
+              <p class="m-1">Simple Task in Progress</p>
+            </li>
+          </ul>
+        </div>
+        <!--IN PROGRESS LIST END-->
       </div>
     </main>
   </div>
