bootstrap column layout

--- a/index.html
+++ b/index.html
@@ -35,12 +35,34 @@
           <h2>In Progress</h2>
           <ul id="list-inProgress" class="list-group">
             <li class="list-group-item">
-              <span class="badge badge-primary badge-pill"></span>
+              <span class="badge badge-primary badge-pill">11/04/2033</span>
               <p class="m-1">Simple Task in Progress</p>
             </li>
           </ul>
         </div>
         <!--IN PROGRESS LIST END-->
+        <!--IN REVIEW LIST START-->
+         <div class="col">
+           <h2>In Review</h2>
+          <ul id="list-inReview" class="list-group">
+            <li class="list-group-item">
+              <span class="badge badge-primary badge-pill">11/03/2023</span>
+              <p class="m-1">Sample Task in Review</p>
+            </li>
+          </ul> 
+         </div>
+        <!--END IN REVIEW :IST-->
+        <!--DONE LIST-->
+        <div class="col">
+          <h2>Done</h2>
+          <ul id="list-done" class="list-group">
+            <li class="list-group-item">
+              <span class="basge badge-primary badge-pill">11/03/2023</span>
+              <p class="m-1">Tasks Done</p>
+            </li>
+          </ul>
+        </div> 
+        <!--END OF DONE LIST-->
       </div>
     </main>
   </div>
