flex box layout bootstrap complete

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="col-12 col-lg-9">
       <div class="m-5 row justify-content-around">
       <!--TO DO LIST-->
-       <div class="col">
+       <div class="col-12 col-md-6 col-xl-3 mb-3">
          <h2>To Do</h2>
          <ul id="list-toDo" class="list-group"></ul>
          </div>
        <!--END TO DO LIST-->  
        <!--IN PROGRESS LIST-->
-        <div class="col">
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
           <h2>In Progress</h2>
           <ul id="list-inProgress" class="list-group">
             <li class="list-group-item">
@@ -42,7 +42,7 @@
         </div>
         <!--IN PROGRESS LIST END-->
         <!--IN REVIEW LIST START-->
-         <div class="col">
+         <div class="col-12 col-md-6 col-xl-3 mb-3">
            <h2>In Review</h2>
           <ul id="list-inReview" class="list-group">
             <li class="list-group-item">
@@ -53,7 +53,7 @@
          </div>
         <!--END IN REVIEW :IST-->
         <!--DONE LIST-->
-        <div class="col">
+        <div class="col-12 col-md-6 col-xl-3 mb-3">
           <h2>Done</h2>
           <ul id="list-done" class="list-group">
             <li class="list-group-item">
