flex grid updated task

--- a/index.html
+++ b/index.html
@@ -22,45 +22,62 @@
         This Can Bring Order and Function to Your Daily Life with Taskmaster Reminders and Easy of Edit of Each Task. 
       </p>
     </header>
+  <!--START-->
     <main class="col-12 col-lg-9">
       <div class="m-5 row justify-content-around">
       <!--TO DO LIST-->
        <div class="col-12 col-md-6 col-xl-3 mb-3">
-         <h2>To Do</h2>
-         <ul id="list-toDo" class="list-group"></ul>
-         </div>
+         <div class="card">
+         <h4 class="card-header">
+           To Do</h4>
+         <ul id="list-toDo" class="list-group list-group-flush"></ul>
+          <li class="list-group-item">
+            <span class="badge badge-primary badge-pill">12/01/1998</span>
+            <p class="m-1">Task for To Do</p>
+          </li>
+        </div>
+      </div> 
        <!--END TO DO LIST-->  
        <!--IN PROGRESS LIST-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
-          <h2>In Progress</h2>
-          <ul id="list-inProgress" class="list-group">
+          <div class="card">
+          <h4 class="card-header">
+            In Progress</h4>
+          <ul id="list-inProgress" class="list-group list-group-flush">
             <li class="list-group-item">
               <span class="badge badge-primary badge-pill">11/04/2033</span>
               <p class="m-1">Simple Task in Progress</p>
             </li>
           </ul>
         </div>
+        </div>
         <!--IN PROGRESS LIST END-->
         <!--IN REVIEW LIST START-->
          <div class="col-12 col-md-6 col-xl-3 mb-3">
-           <h2>In Review</h2>
-          <ul id="list-inReview" class="list-group">
+           <div class="card">
+           <h4 class="card-header">
+             In Review</h4>
+          <ul id="list-inReview" class="list-group list-group-flush">
             <li class="list-group-item">
               <span class="badge badge-primary badge-pill">11/03/2023</span>
               <p class="m-1">Sample Task in Review</p>
             </li>
           </ul> 
+          </div>
          </div>
         <!--END IN REVIEW :IST-->
         <!--DONE LIST-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
-          <h2>Done</h2>
-          <ul id="list-done" class="list-group">
+          <div class="card">
+          <h4 class="card-header">
+            Done</h4>
+          <ul id="list-done" class="list-group list-group-flush">
             <li class="list-group-item">
               <span class="basge badge-primary badge-pill">11/03/2023</span>
               <p class="m-1">Tasks Done</p>
             </li>
           </ul>
+        </div>
         </div> 
         <!--END OF DONE LIST-->
       </div>
