--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>Taskmaster Pro</title>
 </head>
 
+
 <body>
 
   <div class="row min-vh-100 no-gutters">
@@ -30,11 +31,12 @@
          <div class="card">
          <h4 class="card-header">
            To Do</h4>
-         <ul id="list-toDo" class="list-group list-group-flush"></ul>
+         <ul id="list-toDo" class="list-group list-group-flush">
           <li class="list-group-item">
             <span class="badge badge-primary badge-pill">12/01/1998</span>
             <p class="m-1">Task for To Do</p>
           </li>
+        </ul>
         </div>
       </div> 
        <!--END TO DO LIST-->  
@@ -99,11 +101,11 @@
           <form>
             <div class="form-group">
               <label for="modalTaskDescription">Task description</label>
-              <textarea id="modalTaskDescription" rows="3"></textarea>
+              <textarea id="modalTaskDescription" rows="3" class="form-control"></textarea>
             </div>
             <div class="form-group">
               <label for="modalDueDate">Due date</label>
-              <input type="text" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
+              <input type="text" class="form-control" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
             </div>
           </form>
         </div>
