--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
         </div> 
         <!--END OF DONE LIST-->
       </div>
+       <!--TRASH TASK RED-->
+      <div id="trash">
+        <div class="w-100 bg-danger p-3 text-center text-light display-4">
+          Drop HERE to Remove
+        </div>
+      </div>
+      <!--END OF TRASH TASK RED-->
     </main>
   </div>
 
@@ -116,6 +123,9 @@
       </div>
     </div>
   </div>
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
