--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <h1 class="text-center">Taskmaster Pro Edition</h1>
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>
         Add Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block"> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
+      <button id="remove-tasks" class="btn btn-block btn-danger"> <span class="oi oi-minus"></span> 
+        Delete All Tasks</button>
+      <p class="mt-auto d-none d-lg-block"><span class="oi oi-check"></span> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
         This Can Bring Order and Function to Your Daily Life with Taskmaster Reminders and Easy of Edit of Each Task. 
       </p>
     </header>
@@ -74,7 +75,7 @@
          <!--TRASH TASK RED-->
           <div id="trash" class="mt-auto">
           <div class="w-100 bg-danger p-3 text-center text-light display-4">
-            Drop HERE to Remove
+            <span class="oi oi-trash"></span> Drop HERE to Remove
         </div>
       </div>
     </main>
