--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       <h1 class="text-center">Taskmaster Pro Edition</h1>
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>
         Add Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger"> <span class="oi oi-minus"></span> 
+      <button id="remove-tasks" class="btn btn-block btn-danger"> <span class="oi oi-minus mr-2"></span> 
         Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block"><span class="oi oi-check"></span> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
+        <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
+      <p class="d-none d-lg-block"> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
         This Can Bring Order and Function to Your Daily Life with Taskmaster Reminders and Easy of Edit of Each Task. 
       </p>
     </header>
