--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <div class="row min-vh-100 no-gutters">
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
-      <h1 class="text-center">Taskmaster Pro Edition</h1>
+      <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none"></span>
+        Taskmaster Pro Edition</h1>
       <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>
         Add Task</button>
       <button id="remove-tasks" class="btn btn-block btn-danger"> <span class="oi oi-minus mr-2"></span> 
