--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
       </div>
          <!--TRASH TASK RED-->
           <div id="trash" class="mt-auto">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
-            <span class="oi oi-trash"></span> Drop HERE to Remove
+          <div class="w-100 p-3 text-center bottom-trash">
+            <span class="oi oi-trash mx-auto mb-4"></span> Drop HERE to Remove
         </div>
       </div>
     </main>
