--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div> 
       </div>
          <!--TRASH TASK RED-->
-          <div id="trash" class="mt-auto">
+          <div id="trash" class="mt-auto overflow-hidden">
           <div class="w-100 p-3 text-center bottom-trash">
             <span class="oi oi-trash mx-auto mb-4"></span> Drop HERE to Remove
         </div>
