--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
       <h1 class="text-center"><span class="oi oi-task d-inline d-lg-none"></span>
         Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>
+      <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal"><span class="oi oi-plus mr-2"></span>
         Add Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger"> <span class="oi oi-minus mr-2"></span> 
+      <button id="remove-tasks" class="btn btn-block btn-delete"> <span class="oi oi-minus mr-2"></span> 
         Delete All Tasks</button>
         <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
       <p class="d-none d-lg-block"> Task Manager Pro in a Day to Day Manager. You can Organize Your Task in Four Columns (To-Do, in Progress, in Review and Completed). 
@@ -107,8 +107,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save Task</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-save">Save Task</button>
         </div>
       </div>
     </div>
